# UDRefl

./: .gitignore  CMakeLists.txt  README.md
cmake/: Platform.cmake
doc/: change_log.md  introduction_en_US.md  introduction_zh_CN.md  manual_zh_CN.md  overview_zh_CN.md  todo.md  type_convert.md
include/: UDRefl_99.h  UDRefl_bootstrap.h  UDRefl_pch.h
include/UDRefl/: AnyWrapper.h  ArgList.h  Attr.h  AttrList.h  AttrSet.h  BaseInfo.h  Basic.h  Basic.hpp  EnumInfo.h  Enumerator.h  Export.h  Field.h  FieldInfo.h  FieldList.h  FieldPtr.h  FieldPtr.hpp  Func.h  FuncSig.h  FuncTransformer.h  ID.h  IDRegistry.h  IDRegistry.hpp  Info.h  Info.hpp  Method.h  MethodInfo.h  MethodPtr.h  MethodPtr.hpp  NameID.h  NameIDRegistry.h  NameRegistry.h  Object.h  Object.hpp  ObjectPtr.h  ReflMngr.h  ReflMngr.hpp  Registry.h  SharedBlock.h  SharedBuffer.h  SharedObject.h  (+13 more)
include/UDRefl_ext/: Bootstrap.h
src/EMPTY/: CMakeLists.txt
src/boostrap/: CMakeLists.txt  bootstrap.cpp  bootstrap_helper.h  bootstrap_helper_basic.cpp  bootstrap_helper_container_0.cpp  bootstrap_helper_container_1.cpp  bootstrap_helper_container_2.cpp  bootstrap_helper_container_3.cpp  bootstrap_helper_container_4.cpp  bootstrap_helper_container_5.cpp  bootstrap_helper_container_6.cpp  bootstrap_helper_info_0.cpp  bootstrap_helper_info_1.cpp  bootstrap_helper_info_2.cpp  bootstrap_helper_info_3.cpp  bootstrap_helper_info_4.cpp  bootstrap_helper_object.cpp  bootstrap_helper_ptr.cpp  bootstrap_helper_reflmngr_0.cpp  bootstrap_helper_reflmngr_1.cpp  bootstrap_helper_registry.cpp  bootstrap_helper_utemplate.cpp
src/core/: CMakeLists.txt  FieldPtr.cpp  IDRegistry.cpp  InvokeUtil.cpp  InvokeUtil.h  InvokeUtil.hpp  Method.cpp  MethodPtr.cpp  NameIDRegistry.cpp  NameRegistry.cpp  Object.cpp  ObjectPtr.cpp  ReflMngr.cpp  ReflSefl.cpp  Registry.cpp  TypeInfo.cpp  TypeInfoMngr.cpp
src/core/ranges/: TypeTree.cpp  (+4 more)
src/exe_pch/: CMakeLists.txt  EMPTY.cpp
src/pch/: CMakeLists.txt  EMPTY.cpp
(+129 files in other folders)
